# FastAPI-Template

./: .env  .env.dev  .gitignore  LICENSE  README.md  clean_docker.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  requirements.txt
backend/src/: .pre-commit-config.yaml  app_state.py  find_modules.py  logging_config.yaml  main.py  pyproject.toml  pytest.ini  setup.cfg 
backend/src/alembic/: env.py
backend/src/alembic/versions/: 90b314aa1b48_initial_migration.py
backend/src/commons/: environment_master_key.py  settings.py
backend/src/database/: connection.py  session.py
backend/src/middlewares/: cors_config.py  custom_header.py  custom_proxy_headers_middleware.py  header_middleware.py  real_ip_middleware.py  remove_headers.py  request_response_logger_middleware.py
backend/src/models/: environment_info.py
backend/src/repositories/: environment_repository.py
backend/src/routers/: protocol.py  root.py  user.py
backend/src/routers/html/roots/: router.py
backend/src/routers/html/users/: router.py
backend/src/routers/roots/: router.py
backend/src/routers/users/: router.py
backend/src/routers/ws/: chat.py
backend/src/schemas/: environment_info.py
backend/src/services/: environment_service.py  protocol.py
backend/src/static/: index.html
backend/src/tests/: conftest.py  test_docs_and_versioning.py  test_openapi.py
backend/src/utils/: auto_router.py  custom_log_handler.py  firebase_auth.py  middlewares_manager.py  protocol.py  routers_manager.py  util.py
logs/backend/: profile.html
nginx/: backend.conf  nginx.conf  nginx.conf.template
nginx/src/: index.html
nginx/web/: default.conf
