[tool.poetry]
name = "FastAPI_Template"  # プロジェクト名を指定
version = "0.0.1"           # プロジェクトのバージョン
description = "Your project description here."  # プロジェクトの説明
authors = ["YUKI ONO <sk4869pw4869@gmail.com>"]      # 作者の情報
license = "MIT"             # ライセンスを指定

[tool.poetry.dependencies]
python = "^3.12"            # Pythonのバージョンを3.12に指定
alembic = "*"               # Alembic
asyncpg = "*"               # Asyncpg
fastapi = {extras = ["all"], version = "*"}  # FastAPI with all extras
fastapi-camelcase = "*"     # FastAPI CamelCase
fastapi-pagination = "*"     # FastAPI Pagination
httpx = "*"                  # HTTPX
pdoc = "*"                   # Pdoc
psycopg2 = "*"               # Psycopg2
requests = "*"               # Requests
slack-bolt = "*"            # Slack Bolt
sqlmodel = "*"               # SQLModel
types-python-dateutil = "*"  # Python dateutilの型ヒント
uvicorn = {extras = ["standard"], version = "*"}  # Uvicorn with standard extras
python-multipart = "*"       # Python Multipart
python-dotenv = "*"
email-validator = "*"        # Email Validator
passlib = "*"                # Passlib
cryptography = "*"           # Cryptography
fastapi-pretty-errors = "*"  # FastAPI Pretty Errors
asgi-correlation-id = "*"    # ASGI Correlation ID
fastapi-profiler = "*"       # FastAPI Profiler
starlette = "^0.41.2"
fastapi-versioning = "^0.10.0"
fastapi-plugins = {extras = ["all"], version = "^0.13.1"}
fastapi-restful = {extras = ["all"], version = "^0.6.0"}

[tool.poetry.dev-dependencies]
black = "*"                  # Black（コードフォーマッター）
flake8 = "*"                 # Flake8（スタイルチェッカー）
isort = "*"                  # Isort（インポート順序を整えるツール）
mypy = "*"                   # Mypy（型チェックツール）
pyproject-flake8 = "*"       # Flake8の設定をpyproject.tomlで管理
pre-commit = "*"             # Pre-commitフックの設定

[tool.black]
line-length = 120           # Blackの最大行長を120に指定

[tool.flake8]
max-line-length = 120       # Flake8の最大行長を120に指定
ignore = ""                 # 無視するルールを指定（空のまま）
exclude = ".venv/"          # 除外するパスを指定

[tool.isort]
include_trailing_comma = true # 最後のカンマを含める
line_length = 120             # Isortの最大行長を120に指定
multi_line_output = 3         # 複数行出力の形式を指定
use_parentheses = true        # 括弧を使用するかどうかを指定

[tool.mypy]
install_types = true         # 型情報を自動的にインストール
non_interactive = true       # 非対話モードで実行する

[build-system]
requires = ["poetry-core>=1.0.0"]  # poetry-coreのバージョンを指定
build-backend = "poetry.core.masonry.api"  # ビルドバックエンドを指定
