[tool.poetry]
name = "FastAPI-Templete"  # プロジェクト名を指定
version = "0.0.1"           # プロジェクトのバージョン
description = "Your project description here."  # プロジェクトの説明
authors = ["YUKI ONO <sk4869pw4869@gmail.com>"]      # 作者の情報
license = "MIT"             # ライセンスを指定

[tool.poetry.dependencies]
python = ">=3.12,<3.13"            # Pythonのバージョンを3.12に指定
alembic = "*"               # Alembic
asyncpg = "*"               # Asyncpg
fastapi = {extras = ["all"], version = "*"}  # FastAPI with all extras
fastapi-camelcase = "*"     # FastAPI CamelCase
fastapi-pagination = "*"     # FastAPI Pagination
httpx = "*"                  # HTTPX
pdoc = "*"                   # Pdoc
psycopg2 = "*"               # Psycopg2
requests = "*"               # Requests
slack-bolt = "*"            # Slack Bolt
sqlmodel = "*"               # SQLModel
types-python-dateutil = "*"  # Python dateutilの型ヒント
uvicorn = {extras = ["standard"], version = "*"}  # Uvicorn with standard extras
python-multipart = "*"       # Python Multipart
python-dotenv = "*"
email-validator = "*"        # Email Validator
passlib = "*"                # Passlib
cryptography = "*"           # Cryptography
fastapi-pretty-errors = "*"  # FastAPI Pretty Errors
asgi-correlation-id = "*"    # ASGI Correlation ID
fastapi-profiler = "*"       # FastAPI Profiler
starlette = "^0.41.2"
fastapi-versioning = "^0.10.0"
fastapi-plugins = {extras = ["all"], version = "^0.13.1"}
fastapi-restful = {extras = ["all"], version = "^0.6.0"}
#gspread = "^6.1.4"
#google-auth = "^2.36.0"
#google-auth-oauthlib = "^1.2.1"
#google-auth-httplib2 = "^0.2.0"
#google-api-python-client = "^2.151.0"
setuptools = "^75.5.0"
firebase-admin = "^6.6.0"
netifaces ="*"
websockets = "^15.0.1"
[tool.poetry.dev-dependencies]
black = "*"                  # Black（コードフォーマッター）
flake8 = "*"                 # Flake8（スタイルチェッカー）
isort = "*"                  # Isort（インポート順序を整えるツール）
mypy = "*"                   # Mypy（型チェックツール）
pyproject-flake8 = "*"       # Flake8の設定をpyproject.tomlで管理
pre-commit = "*"             # Pre-commitフックの設定
pytest = "^7.0"             # pytest 本体
pytest-asyncio = "^0.21"     # async テストサポート
[tool.poetry.group.dev.dependencies]
flake8-import-order = "^0.18.2"

[tool.black]
line-length = 120           # Blackの最大行長を120に指定

[tool.flake8]
max-line-length = 120       # Flake8の最大行長を120に指定
ignore = ""                 # 無視するルールを指定（空のまま）
exclude = [".venv/", "alembic"]          # 除外するパスを指定
import-order-style = "pep8"  # PEP8準拠の順序を使用
application-import-names =  ["app_state", 'schemas', 'services', 'middlewares', 'models', 'database', 'routers', 'commons', 'utils']  # あなたのプロジェクト名を指定

[tool.isort]
profile = "black"
line_length = 120
include_trailing_comma = true
multi_line_output = 3
use_parentheses = true
known_third_party = ["fastapi", "sqlalchemy", "sqlmodel"]
known_first_party = ["app_state", "schemas", "services", "middlewares", "models", "database", "routers", "commons", "utils"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]


[tool.mypy]
install_types = true         # 型情報を自動的にインストール
non_interactive = true       # 非対話モードで実行する

[build-system]
requires = ["poetry-core>=1.0.0"]  # poetry-coreのバージョンを指定
build-backend = "poetry.core.masonry.api"  # ビルドバックエンドを指定
